--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Bảng 000-999</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bảng số động</title>
 
 <style>
 body{
@@ -17,9 +17,27 @@ h2{
   text-align:center;
 }
 
+.controls{
+  margin-bottom:15px;
+}
+
+input, button{
+  padding:8px;
+  border-radius:6px;
+  border:none;
+  margin-right:5px;
+}
+
+button{
+  cursor:pointer;
+  background:#38bdf8;
+  color:black;
+  font-weight:bold;
+}
+
 .grid{
   display:grid;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
   gap:6px;
 }
 
@@ -45,57 +63,99 @@ h2{
 
 <body>
 
-<h2>Bảng số từ 000 → 999</h2>
+<h2>Bảng số động</h2>
+
+<div class="controls">
+  <label>Chọn số chữ số:</label>
+  <input type="number" id="digitCount" min="1" max="6" value="3">
+  <button onclick="generateGrid()">Tạo bảng</button>
+</div>
+
+<input type="text" id="inputNumbers" 
+placeholder="Nhập số cách nhau bằng dấu cách"
+style="width:100%;margin-bottom:15px;">
+
 <div class="grid" id="grid"></div>
 
 <script>
 
-const data = [
-"002","007","008","011","014","017","025","027","031","034","039","040","041","043","044","068","070","074","076","089","090","098",
-"006","072","080","071","059","088",
-"117","101","131","132","133","138","141","148","154","155","163","166","176","177","178","186","192",
-"122","136","198","149","152","115","129","124","137","181","144","195","165","199","123","108","104",
-"213","212","208","226","230","236","244","260","267","275","276","277","278","286","288","291","295","283","273","282",
-"210","207","265","297","229","205","263","246","290","249","274","262","266",
-"301","303","309","308","310","316","329","331","333","346","354","363","349","365","371","375","384","382","387","389",
-"300","319","304","322","311","327","372","377","324","321","379","390","305","367","338",
-"402","403","413","415","418","426","427","430","431","434","437","442","445","451","454","464","465","484",
-"489","496","494","410","469","457","412","432","400","463","479",
-"503","515","524","525","529","538","549","552","553","555","559","563","582","581","592","597",
-"512","532","575","594","547","506","576","546","513","580","557","586","577","510",
-"605","610","611","613","614","615","636","637","645","646","650","652","653","677","655","659","695",
-"631","634","654","612","658","690","670","647","698","684","626","639","668","687",
-"700","701","710","718","728","730","735","745","752","753","756","761","765","772","773","775","777",
-"721","726","783","782","733","774","740","778","788","746","785","758","797","791","779",
-"800","823","810","813","817","821","858","865","869","872","880","888","894","896","898","866",
-"832","829","812","820","843","844","804","854","856","852","808","842","828","863","897","879",
-"908","909","911","917","918","922","924","931","955","947","959","969","975","977","980","982","987","989",
-"991","995","999","994","988","978","957","912","951","971","985","961",
-"254","548","485","930","142","858","428","285","858",
-"863","461","374","458","982","827","276","768","688","886"
-];
+const DATA_URL = "https://tomato-delicate-zebra-533.mypinata.cloud/ipfs/bafkreic3h5fdyvnotrtjbmjr5tgejlwmstxjiaomklvkziuwhl2353wzau";
 
-// Loại trùng và đảm bảo đủ 3 chữ số
-const dataSet = new Set(
-  data.map(n => n.padStart(3,"0"))
-);
+let ipfsNumberSet = new Set();
+let currentDigits = 4; // file của bạn là 4 chữ số
 
 const grid = document.getElementById("grid");
+const input = document.getElementById("inputNumbers");
+const digitInput = document.getElementById("digitCount");
 
-for(let i=0;i<=999;i++){
-  const num = i.toString().padStart(3,"0");
-  const div = document.createElement("div");
-  div.className="cell";
-  div.textContent=num;
+async function loadIPFS() {
+  try {
+    const response = await fetch(DATA_URL);
+    const text = await response.text();
 
-  if(dataSet.has(num)){
-    div.classList.add("highlight");
+    const numbers = text
+      .replace(/"/g, "") // bỏ dấu ngoặc kép
+      .split(",")        // tách bằng dấu phẩy
+      .map(n => n.trim())
+      .filter(n => n !== "");
+
+    ipfsNumberSet = new Set(numbers);
+
+    console.log("Loaded:", ipfsNumberSet.size, "numbers");
+
+  } catch(err) {
+    console.error("Lỗi tải IPFS:", err);
   }
-
-  grid.appendChild(div);
 }
 
-</script>
+function generateGrid(){
 
+  grid.innerHTML = "";
+  currentDigits = parseInt(digitInput.value);
+
+  const max = Math.pow(10, currentDigits) - 1;
+
+  for(let i=0;i<=max;i++){
+
+    const numStr = i.toString().padStart(currentDigits,"0");
+
+    const div = document.createElement("div");
+    div.className="cell";
+    div.textContent = numStr;
+
+    if(ipfsNumberSet.has(numStr)){
+      div.classList.add("highlight");
+    }
+
+    grid.appendChild(div);
+  }
+}
+
+input.addEventListener("input", () => {
+
+  const userSet = new Set(
+    input.value
+      .split(/[\s,]+/)
+      .map(n => n.trim())
+      .filter(n => n !== "")
+  );
+
+  document.querySelectorAll(".cell").forEach(cell => {
+
+    const numStr = cell.textContent;
+
+    cell.classList.remove("highlight");
+
+    if(ipfsNumberSet.has(numStr) || userSet.has(numStr)){
+      cell.classList.add("highlight");
+    }
+
+  });
+
+});
+
+loadIPFS().then(generateGrid);
+
+</script>
 </body>
 </html>
